# purple-book-solutions

./: README.md
ch02/: ch2.cabal
ch02/dist-newstyle/cache/: improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ch02/src/: Mult.hs  MyLib.hs
ch02/test/: Main.hs
ch03/: ch3.cabal
ch03/dist-newstyle/cache/: config  plan.json  solver-plan  up-to-date
ch03/src/: Reverse.hs
ch04/: ch4.cabal
ch04/src/: MyLib.hs
ch05/: ch5.cabal
ch07/: CHANGELOG.md
ch07/src/: MyLib.hs
ch08/: CHANGELOG.md
ch09/: ch9.cabal
ch10/: CHANGELOG.md  ch10.cabal
ch10/src/: MyLib.hs
ch11/: CHANGELOG.md  ch11.cabal
ch11/src/: MyLib.hs
ch12/: CHANGELOG.md  ch12.cabal
ch12/src/: MyLib.hs
ch14/: CHANGELOG.md  ch14.cabal
ch14/morse/: LICENSE  morse.cabal
ch14/morse/app/: Main.hs
ch14/morse/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ch14/morse/dist-newstyle/packagedb/ghc-9.4.8/: morse-0.1.0.0-inplace.conf  package.cache
ch14/morse/src/: Morse.hs
ch14/morse/test/: TestMain.hs
ch14/src/: MyLib.hs
ch14/test/: Main.hs
ch15/: CHANGELOG.md  ch15.cabal
ch15/src/: MyLib.hs
ch15/test/: Main.hs
ch16/: CHANGELOG.md  ch16.cabal
ch16/src/: MyLib.hs
ch17/: CHANGELOG.md  ch17.cabal
ch17/src/: MyLib.hs
ch17/test/: Main.hs
ch18/: CHANGELOG.md  ch18.cabal
ch18/src/: MyLib.hs
ch18/test/: Main.hs
ch19/: CHANGELOG.md  ch19.cabal
ch19/shawty/: shawty.cabal
ch19/shawty/app/: Main.hs
ch19/shawty/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
ch2/src/: Learn.hs
ch20/: CHANGELOG.md  ch20.cabal
ch20/src/: MyLib.hs
ch20/test/: Main.hs
ch21/: CHANGELOG.md  ch21.cabal
ch21/src/: MyLib.hs
ch21/test/: Main.hs
ch22/: CHANGELOG.md  ch22.cabal
ch22/src/: MyLib.hs
ch23/: CHANGELOG.md  ch23.cabal
ch23/src/: MyLib.hs
ch23/test/: Main.hs
ch24/: CHANGELOG.md  ch24.cabal
ch24/src/: MyLib.hs
ch24/test/: Main.hs
ch25/: CHANGELOG.md  ch25.cabal
ch25/src/: MyLib.hs
ch26/: CHANGELOG.md  ch26.cabal
ch3/: CHANGELOG.md
ch3/src/: MyLib.hs
ch4/: CHANGELOG.md
ch5/src/: MyLib.hs
ch6/: ch6.cabal
ch6/src/: MyLib.hs
ch7/: ch7.cabal
ch8/: ch8.cabal
ch8/src/: MyLib.hs
ch9/: CHANGELOG.md
ch9/src/: Ciphers.hs  MyLib.hs
(+178 files in other folders)
