cabal-version:      3.0
name:               shawty
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             somthn0somthn
maintainer:         lpmaho@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable shawty
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
                    , bytestring
                    , hedis
                    , mtl
                    , network-uri
                    , random
                    , scotty
                    , semigroups
                    , text
                    , transformers
    hs-source-dirs:   app
    default-language: Haskell2010
